--- a/template.html
+++ b/template.html
@@ -13,7 +13,7 @@
             <!-- Aqui vai o seu menu -->
             <ul>
                 <li><a href="#home"> Página Inicial </a></li>
-                <li><a href="#about"> Sobre a clícina </a></li>
+                <li><a href="#about"> Sobre a clínina </a></li>
                 <li><a href="#service"> Horários de atendimento </a></li>
                 <li><a href="#contact"> Contato </a></li>
             </ul>
